--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(HypersphereArea)
 export(MakeFakeLabels)
 export(NewickNumberStringSplitter)
 export(NewickStringSplitter)
+export(UniqueNewickNumberStrings)
 export(UniqueNewickStrings)
 import(Claddis)
 import(ape)
