First addition of LadderizeNewick function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CircularVoronoi)
 export(GetAllPartitionCombinations)
 export(GetNTrees)
 export(HypersphereArea)
+export(LadderizeNewickNumberString)
 export(MakeFakeLabels)
 export(NewickNumberStringSplitter)
 export(NewickStringSplitter)
