--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Author: Graeme T. Lloyd
 Maintainer: Graeme T. Lloyd <graemetlloyd@gmail.com>
 Description: Functions for dealing with biological hyperspaces.
 Depends: ape,Claddis,deldir,R (>= 3.5)
-Imports: strap,viridis
+Imports: partitions,strap,viridis
 License: GPL (>=2)
 LazyData: true
 ByteCompile: yes
